Further removal of dependency on javax DatatypeConverter for Android compatibility